Re-wrote httpCopyParagraphTest